# deepfake-virtualcam-check

./: README.md  pyproject.toml
scripts/: run-stream-client.sh  run-tcp-proxy.sh  start-cluster-server.sh
src/deepfake_virtualcam_check/: __init__.py  cli.py  gateway.py  models.py  scorer.py  serialization.py
tests/: test_scorer.py
